--- a/ps1/ps1_sol.tex
+++ b/ps1/ps1_sol.tex
@@ -443,7 +443,110 @@ Hence, we have a contradiction.
 
 \ifsolution \solution{}
 %%% PROBLEM 5 SOLUTION START %%%
-Write your proof here.
+
+The following is the proof of correctness
+for \texttt{algorithm4}.
+
+\begin{quote}
+We wish to show that \texttt{algorithm4}
+will always return a peak,
+as long as the problem is not empty.
+To that end,
+we wish to prove the following two statements:
+
+{\bf 1. If the peak problem is not empty,
+then \texttt{algorithm4} will always return a location.}
+Say that we start with a problem of size $m \times n$.
+The recursive subproblem examined by \texttt{algorithm4}
+will have dimensions
+$m \times \lfloor n / 2 \rfloor$, 
+$m \times \left(n - \lfloor n / 2 \rfloor - 1 \right)$,
+$\lfloor m /2 \rfloor \times n$ or
+$\left(m - \lfloor m /2 \rfloor -1 \right) \times n$
+.
+
+Therefore, the number of columns or rows - 
+depending on if we are row splitting or column splitting -
+in the problem strictly decreases with each recursive call 
+as long as $n,m > 0$. So \texttt{algorithm4} either returns
+a location at some point, or eventually examines
+a subproblem with a non-positive number of columns or rows.
+The only way for the number of columns or rows to become strictly negative,
+according to the formulas that determine the size of the subproblem,
+is to have $n = 0 or m=0$ at some point.
+So if \texttt{algorithm4} doesn't return a location,
+it must eventually examine an empty subproblem.
+
+We wish to show that there is no way that this can occur.
+Assume, to the contrary,
+that \texttt{algorithm4} does examine an empty subproblem.
+To do this we will focus only on the case of column splitting.
+We can do this as \texttt{algorithm4} is invariant under a matrix transpose,
+so long as we also change the way we split the matrix - from column
+splitting to row splitting or vice versa;
+therefore the proof we give for the columns generalises to the
+case where we are row splitting by considering the same argument
+but under a matrix transpose.
+Just prior to this,
+it must examine a subproblem of size
+$m \times 1$ or $m \times 2$.
+If the problem is of size $m \times 1$, and we are column splitting,
+then calculating the maximum of the central column
+is equivalent to calculating the maximum of the entire problem.
+Hence, the maximum that the algorithm finds must be a peak,
+and it will halt and return the location. 
+If however we are row splitting - and m>1 - then can perform the row split 
+and will have a new array of shape $m' \times 1$ so can apply the logic 
+previously discussed. If instead we are row splitting
+when $m = 1$ then we can consider the transpose of this problem and we have 
+the same case as when we are column splitting with a matrix of size $m \times 1$.
+
+If the problem has dimensions $m \times 2$,
+whilst we are column splitting, then there are two possibilities:
+either the maximum of the central column is a peak
+(in which case the algorithm will halt and return the location),
+or it has a strictly better neighbor in the other column
+(in which case the algorithm will recurse
+on the non-empty subproblem with dimensions $m \times 1$,
+thus reducing to the previous case).
+If instead we are row splitting then whilst m>2 we can just perform
+row split and have a matrix of dimensions $m' \times 2$. If $m = 2$
+Then we can apply the same logic as shown above but for rows instead of
+columns (this can be seen by agai considering the transpose of the problem). 
+So \texttt{algorithm4} can never recurse into an empty subproblem,
+and therefore \texttt{algorithm4} must eventually return a location.
+
+{\bf 2. If \texttt{algorithm4} returns a location,
+it will be a peak in the original problem.}
+If \texttt{algorithm4} returns a location $(r_1, c_1)$,
+then that location must have the best value in column $c_1$ or row $r_1$ of the sub problem,
+and must have been a peak within some recursive subproblem.
+For this proof we shall consider the case that a column split occurs when the location
+returned stops being a peak. However, this argument would also apply to a row split
+due to the algorithm acting the same as a transposed row split.
+Assume, for the sake of contradiction,
+that $(r_1, c_1)$ is not also a peak within the original problem.
+Then as the location $(r_1, c_1)$ is passed up the chain of recursive calls,
+it must eventually reach a level where it stops being a peak.
+At that level, the location $(r_1, c_1)$
+must be adjacent to the dividing column $c_2$ (where $|c_1 - c_2| = 1$),
+and the values must satisfy the inequality
+$val(r_1, c_1) < val(r_1, c_2)$.
+
+Let $(r_2, c_2)$ be
+the location of the maximum value found by \texttt{algorithm1}
+in the dividing column.
+As a result, it must be that $val(r_1, c_2) \le val(r_2, c_2)$.
+Because the algorithm chose to recurse
+on the half containing $(r_1, c_1)$,
+we know that $val(r_2, c_2) < val(r_2, c_1)$.
+Hence, we have the following chain of inequalities:
+$$val(r_1, c_1) < val(r_1, c_2) \le val(r_2, c_2) < val(r_2, c_1)$$
+But in order for \texttt{algorithm1} to return $(r_1, c_1)$ as a peak,
+the value at $(r_1, c_1)$ must have been the greatest value that we have seen,
+making $val(r_1, c_1) \ge val(r_2, c_1)$.
+Hence, we have a contradiction.
+\end{quote}
 %%% PROBLEM 5 SOLUTION END %%%
 \fi
 
